k8s-examples/vs-logrx/2-logrx-server.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: vs-logrx
  name: logrx-server
  namespace: vs
spec:
  selector:
    matchLabels:
      name: logrx-server
  serviceName: logrx-server
  replicas: 2
  minReadySeconds: 3
  template:
    metadata:
      labels:
        name: logrx-server
    spec:
      terminationGracePeriodSeconds: 3
      containers:
        - name: logrx-server
          image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/viewspot-logrx-server:6.1.0dev12
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh"]
          # Ensure /tmp/qs_logs exists, then exec gunicorn
          args: ["-c", "mkdir -p /tmp/qs_logs && exec gunicorn --bind 0.0.0.0:8080 logrx:app"]
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 5m
              memory: 64Mi
          volumeMounts:
            - name: qs-tmp
              mountPath: /tmp/qs_logs
            - name: shared-efs
              mountPath: /efs/logrx-data
      volumes:
        - name: qs-tmp
          emptyDir:
            sizeLimit: 2Gi
        - name: shared-efs
          persistentVolumeClaim:
            claimName: logrx-efs-claim
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: gp2
        resources:
          requests:
            storage: 20Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: vs-logrx
  name: logrx-server
  namespace: vs
spec:
  type: ClusterIP
  selector:
    name: logrx-server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: vs-logrx
  name: logrx-server
  namespace: vs
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vs-logrx.mvp-dev.viewspotstudio.com
      secretName: vs-logrx-tls-secret
  rules:
    - host: vs-logrx.mvp-dev.viewspotstudio.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logrx-server
                port:
                  number: 80
